--- a/html-css/google_landing_page/style.css
+++ b/html-css/google_landing_page/style.css
@@ -8,13 +8,11 @@
 .container{
     width: 100%;
     margin: auto;
-    background-color: aqua;
 }
 .content{
     width: 95%;
     margin: auto;
     height: 100%;
-    background-color:burlywood;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -67,7 +65,6 @@ align-items: center;
 .content_google{
     max-width:60rem;
     height: 600px;
-    background-color: violet;
     margin: auto;
     padding-top: 265px;
 }
@@ -146,4 +143,60 @@ align-items: center;
     width: 100%;
     text-align: center;
     margin-top: 20px;
+}
+.content_turkey{
+    width: 95%;
+
+    margin: auto;
+}
+.container-footer{
+    background-color: #f8f9fa;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+}
+.footer_1{
+    width: 95%;
+    margin: auto;
+    height: 100%;
+}
+.footer_1 p{
+    color:rgba(0,0,0,.54);
+    font-size: 15px;
+    padding: 15px  0;
+}
+
+.footer_2{
+    width: 95%;
+    margin: auto;
+    height: 100%;
+    background-color:#f8f9fa;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 0;
+    border-top:1px solid #dadce0;
+}
+
+.footer_2 ul li{
+    list-style: none;
+    display: inline-block;
+    align-items: center
+}
+
+.footer_2 ul li a{
+    text-decoration: none;
+    font-weight: 300;
+    margin-right: 10px;
+    font-size: 15px;
+    color:rgba(0,0,0,.54);
+
+}
+.footer_2 ul li a:hover{
+    color:1px solid #dadce0;
+    border-bottom:1px solid #3c4043;
+    transition: 0.5s;
+}
+.footer_2 .footer-end ul li a:last-child{
+    margin-right: 0;
 }
