--- a/html-css/aero/style.css
+++ b/html-css/aero/style.css
@@ -162,25 +162,25 @@ color: #E51259;
     margin-right: 10px;
 }
 .collection .content .box1{
-    background:url(/img/14.jpg) center/cover;
+    background:url(img/9.jpg) center/cover;
 }
 .collection .content .box2{
-    background:url(/img/10.jpg) center/cover;
+    background:url(img/10.jpg) center/cover;
 }
 .collection .content .box3{
-    background:url(/img/11.jpg) center/cover;
+    background:url(img/11.jpg) center/cover;
 }
 .collection .content .box4{
-    background:url(/img/12.jpg) center/cover;
+    background:url(img/12.jpg) center/cover;
 }
 .collection .content .box5{
-    background:url(/img/13.jpg) center/cover;
+    background:url(img/13.jpg) center/cover;
 }
 .collection .content .box6{
-    background:url(/img/14.jpg) center/cover;
+    background:url(img/14.jpg) center/cover;
 }
 .collection .content .box7{
-    background:url(/img/11.jpg) center/cover;
+    background:url(img/11.jpg) center/cover;
 }
 
 
