--- a/html-css/checkout_form/style.css
+++ b/html-css/checkout_form/style.css
@@ -6,73 +6,102 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.container .title{
+    text-align: center;
+}
+.container .title h1{
+    font-weight: 500;
+    font-size: 30px;
+    margin-bottom: 50px;
+}
 .container{
+    display: flex;
+    flex-direction: column;
+    padding: 50px 100px;
     width: 100%;
-    padding: 200px;
-    display: flex;
-    justify-content: space-around;
+    
 }
-.container .info{
+.main{
     display: flex;
-    flex-direction: column;
-    max-width: 500px;
+    justify-content: center;
 }
-.container .info .box{
+.main .info{
     display: flex;
     flex-direction: column;
+    width: 35%;
 }
-.container .info .box h1{
+.main .info .box{
+    display: flex;
+    flex-direction: column;
+}
+.main .info .box h1{
     font-size: 20px;
     font-weight: 500;
     margin-bottom: 10px;
 }
-.container .info .box label{
-    margin-bottom: 10px;
+.main .info .box2 h1{
+    margin-top: 15px;
 }
-.container .info .box  input{
+.main .info .box label{
+    margin: 15px 0 3px 0;
+}
+.main .info .box  input{
     border: none;
     width: 100%;
     font-size: 15px;
 margin-left: 10px;
 outline: none;
 }
-.container .info .box  .inpt{
+.main .info .box  .inpt{
     border:1px solid #C7C7C7;
     display: flex;
     padding: 4px;
     align-items: center;
     margin-bottom: 6px;
+    border-radius: 5px;
 
 }
-.container .info .box3{
+.main .info .box3{
     display: flex;
     flex-direction: column;
     margin-top: 10px;
 }
-.container .info .box3 .countr_postcode{
+.main .info .box3 .countr_postcode{
     display: flex;
     justify-content: space-between;
 }
-.container .info .box3 .countr_postcode .countrt{
+.main .info .box3 .countr_postcode .countrt{
     width: 25%;
 }
-.container .info .box3 .countr_postcode .postcode{
+.main .info .box3 .countr_postcode .postcode{
     width: 74%;
 }
-.container .info .box .select{
+.main .info .box .select{
 display: flex;
 flex-wrap: wrap;
 align-items: center;
 }
-.container .info .box3 .select input{
+.main .info .box3 .select input{
     border: none;
     font-size: 15px;
     margin-left: 0;
     outline: none;
     width:5%;
     }
-    .container .info .box3 .select label{
+    .main .info .box3 .select label{
         margin: 0;
+    }
+    .main .info .box3 .countr_postcode .country select{
+        padding: 4px;
+        min-width: 95px;
+    margin-right: 5px;
+    border: 1px solid #C7C7C7;
+    border-radius: 5px;
+    }
+ 
+    .main .info .box3 .select{
+        margin-top: 15px;
     }
 
 
@@ -84,69 +113,85 @@ align-items: center;
 
 
 
-
-
-
-    .container .info2{
+    .main .info2{
         padding: 10px;
         background-color: #EEEEEE;
         height: 100%;
         border-radius: 5px;
+        margin-left: 50px;
+        max-width: 340px;
     }
 
-.container .info .product{
+.main .info .product{
     display: flex;
     margin-bottom: 20px;
 }
-.container .info .product img{
- max-width: 160px;
+.main .info .product img{
+ max-width: 150px;
  border-radius: 5px;
 }
-.container .info .product .product_info{
+.main .info .product .product_info{
     display: flex;
     flex-direction: column;
     margin-left: 15px;
 }
-.container .info .product .product_info h1{
+.main .info .product .product_info h1{
     font-size: 15px;
 }
-.container .info .product .product_info .price p{
+.main .info .product .product_info .price p{
     font-size: 15px;
     color: chocolate;
+    margin: 15px 0;
 }
-.container .info .product .product_info .price  span{
+.main .info .product .product_info .price  span{
 color: black;
 font-size: 13px;
 text-decoration:line-through;
 }
-.container .info .product .product_info .number button{
+.main .info .product .product_info .number button{
 font-size: 14px;
-background-color:#EDEDED;
+background-color:#C7C7C7;
 color: black;
 padding: 2px 6px;
 cursor: pointer;
 border:none;
+
 }
-.container .info .product .product_info .number{
+.main .info .product .product_info .number{
     display: flex;
-    border: 1px solid black;
+    border: 1px solid #C7C7C7;
     padding: 5px;
+    width: fit-content;
+    margin-top: 39px;
+    border-radius: 5px;
 }
-.container .info .product .product_info .number p{
+.main .info .product .product_info .number p{
     margin: 0 10px;
 }
 
-.container .info .total{
+.main .info .total{
     display: flex;
     flex-direction: column;
 }
 
-.container .info .total .shipping{
+.main .info .total .shipping{
     width: 100%;
     display: flex;
     justify-content: space-between;
     border-top: 1px solid gainsboro;
 }
-.container .info .total .shipping h2{
+.main .info .total .shipping h2{
     font-size: 15px;
+    font-weight: 400
+}
+.container .continue{
+    text-align: center;
+    margin-top: 50px;
+}
+.container .continue button{
+    padding: 5px 10px;
+    border:none;
+    color: #fff;
+    background-color: orange;
+    cursor: pointer;r
 }
