--- a/javascript/to_do_list/style.css
+++ b/javascript/to_do_list/style.css
@@ -5,3 +5,47 @@
     margin: 0;
     padding: 0;
 }
+body{
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+    padding: 200px 0;
+}
+.container .addtask{
+    margin-bottom: 40px;
+    min-width: 400px;
+    display: flex;
+}
+.container .addtask input{
+    padding: 5px 10px;
+    width: 100%;
+    outline: none;
+}
+.container .addtask button{
+    padding: 5px 10px;
+}
+.container .notCompleted{
+    min-width: 400px; 
+}
+.container  li{
+    padding: 5px 10px;
+    list-style: inside;
+    background-color: #66CDAA;
+    margin-bottom: 10px;
+    color: aliceblue;
+}
+.container li button{
+    float: right;
+    padding: 2px 6px;
+    margin-left: 5px;
+    background: steelblue;
+    color: antiquewhite;
+    border: none;
+    cursor: pointer;
+}
+.container  h3{
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+ .container .Completed 
