--- a/javascript/guess_number/style.css
+++ b/javascript/guess_number/style.css
@@ -17,23 +17,23 @@ body {
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-direction: column;
   }
 
   #container #guess{
-      font-size: 50px;
-      margin-bottom: 90px;
+      font-size: 30px;
+      margin-bottom: 30px;
       font-weight: 400;
       color:#D8D053;
       background: rgb(67,130,185, 0.6);;
       padding: 15px;
       border-radius: 5px;
+      margin-top: 60px;
   }
   #container #outputtext{
-    font-size: 25px;
-    font-weight: 700;
+    font-size: 20px;
+    font-weight: 400;
     padding: 10px;
     color:#D8D053;
     background: rgb(67,130,185, 0.6);
@@ -42,27 +42,38 @@ body {
 
 #container #outputcount{
     font-size: 25px;
-    font-weight: 700;
-    color:#D8D053; 
+    font-weight: 400;
+    color:#fff; 
     border-radius: 5px;
 }
 input{
   padding: 6px 6px;
   outline: none;
-  width: 250px;
+  width: 360px;
+  font-size: 16px;
   background: #D8D053;
   border: none;
   border: 1px solid #2968AB;
-  margin: 90px 0;
+  margin: 30px 0;
 }
 button{
   padding: 6px 6px;
   outline: none;
   background: #2968AB;
+  font-size: 16px;
   color: #fff;
   border: none;
   border: 1px solid #2968AB;
   cursor: pointer;
   border-left: none;
+}
+img{
+  position: absolute;
+  bottom: 150px;
+  box-shadow: rgb(0 0 0 / 25%) 0px 54px 55px, rgb(0 0 0 / 12%) 0px -12px 30px, rgb(0 0 0 / 12%) 0px 4px 6px, rgb(0 0 0 / 17%) 0px 12px 13px, rgb(0 0 0 / 9%) 0px -3px 5px;
+  border-radius: 10px;
+  opacity: 9;
+  width: 600px;
+  display: none;
 }
 
